fixed header, change style scrollbar, scroll menu popper and search account, edit title and favicon, fix warning tipppy

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -123,3 +123,25 @@ body {
     top: -8px;
   }
 }
+
+// CSS Scrollbar
+body {
+  overflow-y: overlay;
+  overscroll-behavior: contain;
+  -webkit-font-smoothing: antialiased;
+}
+
+html *::-webkit-scrollbar {
+  border-radius: 0;
+  width: 0.8rem;
+}
+
+html *::-webkit-scrollbar-track {
+  border-radius: 0;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+html *::-webkit-scrollbar-thumb {
+  border-radius: 0.4rem;
+  background-color: rgba(0, 0, 0, 0.15);
+}
