--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -7,6 +7,13 @@
   display: flex;
   justify-content: center;
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+
+  background-color: var(--white-color);
 }
 
 .content {
