--- a/src/components/Popper/Wrapper/Wrapper.module.scss
+++ b/src/components/Popper/Wrapper/Wrapper.module.scss
@@ -1,6 +1,5 @@
 .wrapper {
   width: 100%;
-  max-height: min((100vh - 9.6rem) - 6rem, 73.4rem);
 
   background: rgb(255, 255, 255);
   box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
